Set up 5 main cards with placeholder images and floating animations

--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
+    "leva": "^0.10.0",
+    "r3f-perf": "^7.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.174.0"
