--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
+    "@react-three/postprocessing": "^3.0.4",
     "leva": "^0.10.0",
+    "postprocessing": "^6.37.1",
     "r3f-perf": "^7.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.174.0"
+    "three": "^0.174.0",
+    "vite-plugin-glsl": "^1.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
