--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -19,6 +19,7 @@
     "r3f-perf": "^7.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "three": "^0.174.0",
     "vite-plugin-glsl": "^1.3.3"
   },
