--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@whatisjery/react-fluid-distortion": "^1.4.0",
     "gsap": "^3.12.7",
     "leva": "^0.10.0",
     "postprocessing": "^6.37.1",
