--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "three": "^0.174.0",
+    "three-custom-shader-material": "^6.3.1",
     "vite-plugin-glsl": "^1.3.3",
     "zustand": "^5.0.3"
   },
