--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@react-three/drei": "^10.0.5",
@@ -23,6 +24,7 @@
     "react-icons": "^5.5.0",
     "three": "^0.174.0",
     "three-custom-shader-material": "^6.3.1",
+    "vercel": "^41.6.1",
     "vite-plugin-glsl": "^1.3.3",
     "zustand": "^5.0.3"
   },
