--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "three": "^0.174.0",
     "three-custom-shader-material": "^6.3.1",
+    "three-stdlib": "^2.35.15",
     "vercel": "^41.6.1",
     "vite-plugin-glsl": "^1.3.3",
     "zustand": "^5.0.3"
